# graph-x-0x0

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CROSS_DEVICE.md  llm_client.py  run.py  setup.sh
docs/: SYSTEM_FRAMEWORK_AND_USER_GUIDE.md
integration/aios/: README.md  example_self_improving_agent.py  graph_x_tool.py
mobile/termux/: README.md  mobile_chat.py  mobile_dashboard.py  termux_bootstrap.sh
python/: high-agent-repl.py  self-improving-loop.py
python/high_agent_engine/: __init__.py  engine.py  graph.py  regime.py
src/: lib.rs  main.rs
