[package]
name = "high-agent-rs"
version = "0.1.0"
edition = "2021"
authors = ["Bryant Issiah Morris Jr. <bryant@hyperhermes.dev>"]
description = "Graph_x_0x0 mathematical codebase analysis engine with regime switching and optional ratatui TUI. Part of high-agent / MemePlace ecosystem."
license = "MIT"

[dependencies]
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
json = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "high-agent-rs"
path = "src/main.rs"

[[bin]]
name = "high-agent-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[lib]
name = "high_agent_rs"
path = "src/lib.rs"